--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="~/assets/landing-page/vendors/bootstrap-datepicker/bootstrap-datetimepicker.min.css">
     <link rel="stylesheet" href="~/assets/landing-page/vendors/nice-select/css/nice-select.css">
     <link rel="stylesheet" href="~/assets/landing-page/vendors/owl-carousel/owl.carousel.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@400;600;700&family=Inter:wght@500;600;700&display=swap"
+          rel="stylesheet">
     <!-- main css -->
     <link rel="stylesheet" href="~/assets/landing-page/css/style.css">
     <link rel="stylesheet" href="~/assets/landing-page/css/responsive.css">
@@ -128,6 +130,10 @@
     <script src="~/assets/landing-page/js/stellar.js"></script>
     <script src="~/assets/landing-page/vendors/lightbox/simpleLightbox.min.js"></script>
     <script src="~/assets/landing-page/js/custom.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation/dist/additional-methods.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    <script src="~/client-app/shared/base.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
