--- a/WebApp/Views/Shared/_TopBarPartial.cshtml
+++ b/WebApp/Views/Shared/_TopBarPartial.cshtml
@@ -59,7 +59,7 @@
                                 </a>
                                 <div class="dropdown-divider"></div>
                                 <!-- item-->
-                                <a href="/HomeAccount?UserId=@User.GetSpecificClaim("UserId")" class="dropdown-item notify-item">
+                                <a href="/my-account?UserId=@User.GetSpecificClaim("UserId")" class="dropdown-item notify-item">
                                     <i class="remixicon-account-circle-line"></i>
                                     <span>My Account</span>
                                 </a>
