--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -1,9 +1,8 @@
-﻿@{
+﻿@model BusinessLogic.Dtos.Home.HomeResponse﻿
+@{
     ViewData["Title"] = "Home";
-}
-
-@section Scripts {
-
+    var httpContext = ViewContext.HttpContext;
+    string appDomain = $"{httpContext.Request.Scheme}://{httpContext.Request.Host}";
 }
 
 <!--================Banner Area =================-->
@@ -285,6 +284,38 @@
             <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
         </div>
         <div class="row mb_30">
+            @foreach (var item in Model.News)
+            {
+                <div class="col-lg-4 col-md-6">
+                    <div class="single-recent-blog-post">
+                        <div class="thumb">
+                            <img src="@appDomain@item.Thumbnail" width="360px" height="260px" alt="post">
+                        </div>
+                        <div class="details">
+                            <div class="tags">
+                                <a href="#" class="button_hover tag_btn">Travel</a>
+                                <a href="#" class="button_hover tag_btn">Life Style</a>
+                            </div>
+                            <a href="#"><h4 class="sec_h4">@item.Title</h4></a>
+                            <h6 class="date title_color">@item.CreatedOn</h6>
+                        </div>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</section>
+<!--================ Recent Area  =================-->
+
+@* 
+<!--================ Latest Blog Area  =================-->
+<section class="latest_blog_area section_gap">
+    <div class="container">
+        <div class="section_title text-center">
+            <h2 class="title_color">latest posts from blog</h2>
+            <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
+        </div>
+        <div class="row mb_30">
             <div class="col-lg-4 col-md-6">
                 <div class="single-recent-blog-post">
                     <div class="thumb">
@@ -336,4 +367,4 @@
         </div>
     </div>
 </section>
-<!--================ Recent Area  =================-->
+<!--================ Recent Area  =================--> *@
