--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -96,46 +96,18 @@
             <p>We all live in an age that belongs to the young at heart. Life that is becoming extremely fast, </p>
         </div>
         <div class="row mb_30">
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="~/assets/landing-page/image/room1.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
+            @foreach (var item in Model.RoomTypes)
+            {
+                <div class="col-lg-3 col-sm-6">
+                    <div class="accomodation_item text-center">
+                        <div class="hotel_img">
+                            <img src="@appDomain@item.Image" width="263px" height="270px" alt="post">
+                            <a href="#" class="btn theme_btn button_hover">Book Now</a>
+                        </div>
+                        <a href="#"><h4 class="sec_h4">@item.Name</h4></a>
                     </div>
-                    <a href="#"><h4 class="sec_h4">Double Deluxe Room</h4></a>
-                    <h5>$250<small>/night</small></h5>
                 </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="~/assets/landing-page/image/room2.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Single Deluxe Room</h4></a>
-                    <h5>$200<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="~/assets/landing-page/image/room3.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Honeymoon Suit</h4></a>
-                    <h5>$750<small>/night</small></h5>
-                </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-                <div class="accomodation_item text-center">
-                    <div class="hotel_img">
-                        <img src="~/assets/landing-page/image/room4.jpg" alt="">
-                        <a href="#" class="btn theme_btn button_hover">Book Now</a>
-                    </div>
-                    <a href="#"><h4 class="sec_h4">Economy Double</h4></a>
-                    <h5>$200<small>/night</small></h5>
-                </div>
-            </div>
+            }
         </div>
     </div>
 </section>
@@ -306,65 +278,3 @@
     </div>
 </section>
 <!--================ Recent Area  =================-->
-
-@* 
-<!--================ Latest Blog Area  =================-->
-<section class="latest_blog_area section_gap">
-    <div class="container">
-        <div class="section_title text-center">
-            <h2 class="title_color">latest posts from blog</h2>
-            <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
-        </div>
-        <div class="row mb_30">
-            <div class="col-lg-4 col-md-6">
-                <div class="single-recent-blog-post">
-                    <div class="thumb">
-                        <img class="img-fluid" src="~/assets/landing-page/image/blog/blog-1.jpg" alt="post">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <a href="#" class="button_hover tag_btn">Travel</a>
-                            <a href="#" class="button_hover tag_btn">Life Style</a>
-                        </div>
-                        <a href="#"><h4 class="sec_h4">Low Cost Advertising</h4></a>
-                        <p>Acres of Diamonds… you’ve read the famous story, or at least had it related to you. A farmer.</p>
-                        <h6 class="date title_color">31st January,2018</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="single-recent-blog-post">
-                    <div class="thumb">
-                        <img class="img-fluid" src="~/assets/landing-page/image/blog/blog-2.jpg" alt="post">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <a href="#" class="button_hover tag_btn">Travel</a>
-                            <a href="#" class="button_hover tag_btn">Life Style</a>
-                        </div>
-                        <a href="#"><h4 class="sec_h4">Creative Outdoor Ads</h4></a>
-                        <p>Self-doubt and fear interfere with our ability to achieve or set goals. Self-doubt and fear are</p>
-                        <h6 class="date title_color">31st January,2018</h6>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="single-recent-blog-post">
-                    <div class="thumb">
-                        <img class="img-fluid" src="~/assets/landing-page/image/blog/blog-3.jpg" alt="post">
-                    </div>
-                    <div class="details">
-                        <div class="tags">
-                            <a href="#" class="button_hover tag_btn">Travel</a>
-                            <a href="#" class="button_hover tag_btn">Life Style</a>
-                        </div>
-                        <a href="#"><h4 class="sec_h4">It S Classified How To Utilize Free</h4></a>
-                        <p>Why do you want to motivate yourself? Actually, just answering that question fully can </p>
-                        <h6 class="date title_color">31st January,2018</h6>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--================ Recent Area  =================--> *@
