--- a/WebApp/Views/Room/Index.cshtml
+++ b/WebApp/Views/Room/Index.cshtml
@@ -126,7 +126,7 @@
                             <div class="book_tabel_item">
                                 <div class="input-group">
                                     <select class="wide">
-                                        <option data-display="Child">Number of Rooms</option>
+                                        <option data-display="Room Types">Room Types</option>
                                         <option value="1">Room 01</option>
                                         <option value="2">Room 02</option>
                                         <option value="3">Room 03</option>
