Update Ui home/room

--- a/WebApp/Views/Home/Index.cshtml
+++ b/WebApp/Views/Home/Index.cshtml
@@ -252,7 +252,7 @@
 <section class="latest_blog_area section_gap">
     <div class="container">
         <div class="section_title text-center">
-            <h2 class="title_color">latest posts from blog</h2>
+            <h2 class="title_color">Latest Posts From Blog</h2>
             <p>The French Revolution constituted for the conscience of the dominant aristocratic class a fall from </p>
         </div>
         <div class="row mb_30">
