--- a/WebApp/Views/Identity/ConfirmEmail.cshtml
+++ b/WebApp/Views/Identity/ConfirmEmail.cshtml
@@ -12,16 +12,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
     <title>@Localizer["ResetPassword"]</title>
-    <meta name="description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
-    <meta name="keywords" content="Minimax" />
 
-    <link rel="icon" href="~/assets/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/vnd.microsoft.icon">
     <meta property="og:title" content="@Localizer["ResetPassword"]" />
-    <meta property="og:description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
     <meta property="og:type" content="article" />
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Inter:wght@500;600&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="~/assets/landing-page/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/assets/landing-page/css//bootstrap.min.css" />
     <link rel="stylesheet" href="~/assets/landing-page/css/app.css" />
 </head>
 
