--- a/WebApp/Views/Identity/ForgotPassword.cshtml
+++ b/WebApp/Views/Identity/ForgotPassword.cshtml
@@ -42,7 +42,7 @@
                                 <div class="field form-login p-0">
                                     <label for="Email">Email</label>
                                     <div class="field-Email">
-                                    <input id="Email" type="text" class="form-control" placeholder="Email" asp-for="Email" value="@Model.Email">
+                                        <input id="Email" type="text" class="form-control" placeholder="Email" asp-for="Email" value="@Model.Email">
                                     </div>
                                 </div>
                                 <button type="submit" class="submit-forgot">@Localizer["Continue"]</button>
@@ -53,7 +53,7 @@
                     {
                         <div class="forgot-password-success">
                             <h2>@Localizer["EmailOnTheWay"]</h2>
-                            <p>@Localizer["SendMailSuccess1"] <strong>Minmaxgreen@gmail.com</strong>. @Localizer["SendMailSuccess2"]</p>
+                            <p>@Localizer["SendMailSuccess1"] <strong>@Model.Email</strong>. @Localizer["SendMailSuccess2"]</p>
                             <span>
                                 <img src="~/assets/landing-page/img/icon/letter_mess.webp" width="56px" height="56px" alt="letter_mess">
                             </span>
