--- a/WebApp/Views/Identity/EmailVerify.cshtml
+++ b/WebApp/Views/Identity/EmailVerify.cshtml
@@ -11,13 +11,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>@Localizer["ForgotPassword"]</title>
-    <meta name="description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
-    <meta name="keywords" content="Minimax" />
+    <title>@Localizer["EmailVerify"]</title>
 
-    <link rel="icon" href="~/assets/favicon.ico" type="image/vnd.microsoft.icon">
-    <meta property="og:title" content="@Localizer["ForgotPassword"]" />
-    <meta property="og:description" content="Empowering Sustainability with Smart Environmental Accounting | Minimax" />
+    <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/vnd.microsoft.icon">
+    <meta property="og:title" content="@Localizer["EmailVerify"]" />
     <meta property="og:type" content="article" />
     <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Inter:wght@500;600&display=swap"
           rel="stylesheet">
@@ -32,9 +29,9 @@
                 <div class="wrap-forgot-password">
                     <div class="forgot-password-success">
                         <h2>@Localizer["EmailOnTheWay"]</h2>
-                        <p>@Localizer["SendMailSuccess1"] <strong>Minmaxgreen@gmail.com</strong>. @Localizer["SendMailSuccess2"]</p>
+                        <p>@Localizer["SendMailSuccess1"] <strong>@TempData["EmailVerify"]</strong>. @Localizer["SendMailSuccess2"]</p>
                         <span>
-                            <img src="~/assets/landing-page/img/icon/letter_mess.webp" width="56px" height="56px" alt="letter_mess">
+                            <img src="~/assets/images/letter_mess.webp" width="56px" height="56px" alt="letter_mess">
                         </span>
                         <a asp-action="Login">@Localizer["Login"]</a>
                     </div>
