--- a/WebApp/Views/Identity/SignUp.cshtml
+++ b/WebApp/Views/Identity/SignUp.cshtml
@@ -16,6 +16,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- App favicon -->
     <link rel="shortcut icon" href="assets\images\favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Arimo:wght@600;700&family=Inter:wght@500;600&display=swap"
+          rel="stylesheet">
 
     <!-- App css -->
     <link href="~/assets/page/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -40,19 +42,29 @@
                                 <p class="text-muted mb-4 mt-3">Don't have an account? Create your own account, it takes less than a minute.</p>
                             </div>
 
-                            <form action="#">
+                            <form asp-action="SignUp">
+                                <div asp-validation-summary="All" class="text-danger"></div>
                                 <div class="form-group">
-                                    <label for="fullname">Full Name</label>
-                                    <input class="form-control" type="text" id="fullname" placeholder="Enter your name" required="">
+                                    <label for="Firstname">@Localizer["FullName"]</label>
+                                    <input id="Firstname" type="text" class="form-control" placeholder="@Localizer["FirstName"]" asp-for="FirstName" value="@Model.FirstName">
+                                    <input id="Lastname" type="text" class="form-control" placeholder="@Localizer["LastName"]" asp-for="LastName" value="@Model.LastName">
                                 </div>
+
                                 <div class="form-group">
                                     <label for="emailaddress">Email address</label>
-                                    <input class="form-control" type="email" id="emailaddress" required="" placeholder="Enter your email">
+                                    <input id="Email" type="text" class="form-control" placeholder="Email" asp-for="Email" value="@Model.Email">
                                 </div>
+
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input class="form-control" type="password" required="" id="password" placeholder="Enter your password">
+                                    <input id="Password" type="password" class="form-control" placeholder="@Localizer["Password"]" asp-for="Password" value="@Model.Password">
                                 </div>
+
+                                <div class="form-group">
+                                    <label for="password">Confirm Password</label>
+                                    <input id="ConfirmPassword" type="password" class="form-control" placeholder="@Localizer["ConfirmPassword"]" asp-for="ConfirmPassword" value="@Model.ConfirmPassword">
+                                </div>
+
                                 <div class="form-group">
                                     <div class="custom-control custom-checkbox">
                                         <input type="checkbox" class="custom-control-input" id="checkbox-signup">
@@ -60,7 +72,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group mb-0 text-center">
-                                    <button class="btn btn-primary btn-block" type="submit"> Sign Up </button>
+                                    <button class="btn btn-primary btn-block" type="submit">@Localizer["SignUp"]</button>
                                 </div>
                             </form>
 
@@ -82,7 +94,7 @@
 
                     <div class="row mt-3">
                         <div class="col-12 text-center">
-                            <p class="text-muted">Already have account?  <a href="pages-login.html" class="text-muted font-weight-medium ml-1">Sign In</a></p>
+                            <p class="text-muted">Already have account?  <a href="/identity/login" class="text-muted font-weight-medium ml-1">Sign In</a></p>
                         </div> <!-- end col -->
                     </div>
                     <!-- end row -->
@@ -102,8 +114,9 @@
 
     <!-- Vendor js -->
     <script src="~/assets/page/js/vendor.min.js"></script>
-
     <!-- App js -->
     <script src="~/assets/page/js/app.min.js"></script>
+    <script src="~/assets/landing-page/js/jquery.min.js"></script>
+    <script src="~/assets/landing-page/js/main.js" defer></script>
 </body>
 </html>
