--- a/WebApp/Views/Shared/_TopBarPartial.cshtml
+++ b/WebApp/Views/Shared/_TopBarPartial.cshtml
@@ -24,11 +24,20 @@
                     <li class="nav-item"><a class="nav-link" href="/blog">Blog</a></li>
                     <li class="nav-item"><a class="nav-link" href="/#">Elemests</a></li>
                     <li class="nav-item"><a class="nav-link" href="/contact">Contact</a></li>
-
+                    <li class="nav-item dropdown d-none d-lg-block">
+                        <a class="nav-link dropdown-toggle mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
+                            <img src="~/assets/images/flags/us.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">English <i class="mdi mdi-chevron-down"></i> </span>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <!-- item-->
+                            <a href="javascript:void(0);" class="dropdown-item notify-item">
+                                <img src="~/assets/images/flags/italy.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">Italian</span>
+                            </a>
+                        </div>
+                    </li>
                     @{
                         bool isLoggedIn = !string.IsNullOrEmpty(User.GetSpecificClaim("UserId"));
                     }
-
                     @if (isLoggedIn)
                     {
                         <li class="nav-item dropdown notification-list">
