--- a/WebApp/Areas/Admin/Views/CostOverrun/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/CostOverrun/Index.cshtml
@@ -73,7 +73,7 @@
         <td>{{Name}}</td>
         <td>{{{Image}}}</td>
         <td>{{Price}}</td>
-        <td>{{Description}}</td>
+        <td class="long-col">{{Description}}</td>
         <td class="text-center action-columns">
             <a href="#" data-id="{{Id}}" class="btn btn-xs btn-info btn-edit" ><i class="fe-edit-2"></i></a>
             <a href="#" data-id="{{Id}}" class="btn btn-xs btn-danger btn-delete"><i class="fe-trash-2"></i></a>
