--- a/WebApp/Areas/Admin/Views/FeedBack/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/FeedBack/Index.cshtml
@@ -69,8 +69,8 @@
         <td>{{Name}}</td>
         <td>{{Email}}</td>
         <td>{{Title}}</td>
-        <td>{{Content}}</td>
-        <td>{{Reply}}</td>
+        <td class="long-col">{{Content}}</td>
+        <td class="long-col">{{Reply}}</td>
         <td>{{ReplyBy}}</td>
         <td>{{CreatedOn}}</td>
         <td class="text-center action-columns">
