--- a/WebApp/Areas/Admin/Views/News/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/News/Index.cshtml
@@ -73,7 +73,7 @@
         <td>{{Order}}</td>
         <td>{{Title}}</td>
         <td>{{{Thumbnail}}}</td>
-        <td>{{Content}}</td>
+        <td class="long-col">{{Content}}</td>
         <td>{{{Hot}}}</td>
         <td>{{{Status}}}</td>
         <td class="text-center action-columns">
