--- a/WebApp/Areas/Admin/Views/RoomTypes/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/RoomTypes/Index.cshtml
@@ -75,7 +75,7 @@
         <td>{{Name}}</td>
         <td>{{{Image}}}</td>
         <td>{{Star}}</td>
-        <td>{{Description}}</td>
+        <td class="long-col">{{Description}}</td>
         <td>{{CreatedBy}}</td>
         <td>{{{CreatedOn}}}</td>
         <td class="text-center action-columns">
