--- a/WebApp/Areas/Admin/Views/SpecialDayRates/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/SpecialDayRates/Index.cshtml
@@ -75,7 +75,7 @@
 <script id="table-template" type="x-tmpl-mustache">
     <tr>
         <td>{{Order}}</td>
-        <td>{{Title}}</td>
+        <td class="long-col">{{Title}}</td>
         <td>{{PercentDiscount}}</td>
         <td>{{SinceDay}}</td>
         <td>{{ToDay}}</td>
