--- a/WebApp/Areas/Admin/Views/VoteBooking/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/VoteBooking/Index.cshtml
@@ -68,7 +68,7 @@
         <td>{{BookingCode}}</td>
         <td>{{Title}}</td>
         <td>{{Star}}</td>
-        <td>{{Comment}}</td>
+        <td class="long-col">{{Comment}}</td>
         <td class="text-center action-columns">
             <a href="#" data-id="{{Id}}" class="btn btn-xs btn-danger btn-delete"><i class="fe-trash-2"></i></a>
         </td>
