--- a/WebApp/Areas/Admin/Views/Services/Index.cshtml
+++ b/WebApp/Areas/Admin/Views/Services/Index.cshtml
@@ -73,7 +73,7 @@
         <td>{{Order}}</td>
         <td>{{Name}}</td>
         <td>{{{Image}}}</td>
-        <td>{{Description}}</td>
+        <td class="long-col">{{Description}}</td>
         <td>{{CreatedBy}}</td>
         <td>{{{CreatedOn}}}</td>
         <td class="text-center action-columns">
