--- a/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
+++ b/WebApp/Areas/Admin/Views/News/_AddEditModal.cshtml
@@ -8,11 +8,27 @@
             <div class="modal-body">
                 <form class="form-horizontal" role="form" id="formMaintainance">
                     <div class="tab-content">
-                        <div class="form-group">
-                            <input type="hidden" id="hidId" value="0" />
-                            <label for="txtTitle" class="col-sm-auto control-label no-padding-right">Tiêu đề </label>
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control" id="txtTitle" name="txtTitle" placeholder="Tiêu đề">
+                        <div class="row">
+                            <div class="col-sm-6">
+                                <div class="form-group">
+                                    <input type="hidden" id="hidId" value="0" />
+                                    <label for="txtTitle" class="col-sm-auto control-label no-padding-right">Tiêu đề </label>
+                                    <div class="col-sm-12">
+                                        <input type="text" class="form-control" id="txtTitle" name="txtTitle" placeholder="Tiêu đề">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6">
+                                <div class="form-group col-sm-12">
+                                    <label for="txtNewsType" class="control-label no-padding-right">Loại tin tức <span class="text-danger">*</span></label>
+                                    <select class="custom-select" id="txtNewsType" name="txtNewsType">
+                                        <option value="">--</option>
+                                        <option value="Travel">Du lịch</option>
+                                        <option value="Life">Đời sống</option>
+                                        <option value="Entertainment">Giải trí</option>
+                                    </select>
+                                </div>
                             </div>
                         </div>
 
