--- a/WebApp/Views/Identity/ConfirmEmail.cshtml
+++ b/WebApp/Views/Identity/ConfirmEmail.cshtml
@@ -11,7 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>@Localizer["ResetPassword"]</title>
+    <title>@Localizer["EmailAuthentication"]</title>
 
     <link rel="icon" href="~/assets/landing-page/image/favicon.png" type="image/vnd.microsoft.icon">
     <meta property="og:title" content="@Localizer["ResetPassword"]" />
